--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> SHIORI YAMAKAWA ポートフォリオ</title>
+        <title> SHIORI YAMAKAWA PORTFOLIO</title>
         <meta charset="utf-8">
         <link rel="stylesheet"
               type="text/css"
               href="css/style.css">
+              <link rel="preconnect" href="https://fonts.googleapis.com">
+              <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+              <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -20,10 +23,10 @@
             <h1>SHIORI YAMAKAWA</h1>
             <h2>PORTFOLIO</h2>
             <p>
-                山川詩織のポートフォリオへようこそ。
+                山川詩織のポートフォリオへようこそ
             </p>
             <p>
-                栃木在住の職業訓練生です。
+                栃木在住の職業訓練生です
             </p>
         </div>
     </header>
@@ -37,11 +40,14 @@
                 この度は山川のポートフォリオへ
                 お越しいただきましてありがとうございます。
             </p>
+            <img src="images/pose_reiwa_woman.png" alt="令和ポーズ" width="200" height="200">
         </section>
         <section id="history">
             <h1>経歴</h1>
             <ul>
-                <li>地質調査会社の営業</li>
+                <p>文系の大学を卒業後、地質調査会社に就職（営業）。</p>
+                <p>現在はSHINBIデザインスクールに通っています。</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d205452.44299820854!2d139.70385130800454!3d36.4286812293878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601f67d1159610b7%3A0x63855ee192dd2e8a!2zU0hJTkJJ44OH44K244Kk44Oz44K544Kv44O844Or!5e0!3m2!1sja!2sjp!4v1675834386700!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </section>
         <section id="skill" class="items">
@@ -51,14 +57,15 @@
                 <li>JavaScript</li>
                 <li>SQL</li>
                 <li>Java</li>
+                <p>予定です。</p>
             </ul>
         </section>
         <section id="hobby" class="items">
-            <h1>趣味</h1>
+            <h1>趣味・好きなもの</h1>
             <ul>
                 <li>読書</li>
                 <li>ゲーム</li>
-                <li>動物を見ること</li>
+                <li>動物</li>
             </ul>
         </section>
         <section id="link">
